<resources>
    <string name="app_name">PlantWise App</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_news">Berita</string>

    <string name="username">Isi nama pengguna</string>
    <string name="home">Laman Utama</string>
    <string name="news">Laman Berita</string>
    <string name="profile">Laman Profile</string>
    <string name="text_home">Home</string>

    <string name="searchbar_hint">Masukkan nama tanaman</string>
    <string name="desc_app">PlantWise adalah aplikasi yang membantu pengguna dengan memberikan rekomendasi tanaman yang cocok untuk ditanam. Anda hanya perlu memasukkan lokasi tempat Anda ingin menanam dan aplikasi ini akan memilih tanaman apa yang bisa ditanam!</string>
    <string name="button_map">Go</string>
    <string name="card_map">Masukkan lokasi?</string>
    <string name="desc_image_map">Map</string>
    <string name="saved_plant">Tanaman yang tersimpan</string>

    <string name="published_date">Published Date</string>
    <string name="hottest_news">Berita Terhangat</string>
    <string name="recent_news">Berita Terbaru</string>
    <string name="news_title">Judul Berita</string>
    <string name="news_image">Gambar Berita</string>
    <string name="news_content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
optio, eaque rerum! Provident similique accusantium nemo autem.</string>

    <string name="plant_image">Gambar Tanaman</string>
    <string name="plant_title">Nama Tanaman</string>
    <string name="plant_desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
optio, eaque rerum! Provident similique accusantium nemo autem.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>