<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/listItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="16dp">

    <ImageView
        android:id="@+id/iv_news_item"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars"
        android:contentDescription="@string/news_image" />

    <TextView
        android:id="@+id/tv_title_item"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:textSize="18sp"
        android:gravity="start"
        android:maxLines="3"
        android:ellipsize="end"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_news_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tv_date_item"
        tools:text="@string/news_title" />

    <TextView
        android:id="@+id/tv_date_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="start"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tv_title_item"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_item"
        tools:text="@string/published_date" />

</androidx.constraintlayout.widget.ConstraintLayout>