<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.dicoding.plantwiseapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_mapsFragment"
            app:destination="@id/mapsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_news"
        android:name="com.dicoding.plantwiseapp.ui.news.NewsFragment"
        android:label="@string/title_news"
        tools:layout="@layout/fragment_news" >
        <action
            android:id="@+id/action_navigation_news_to_detailNewsFragment"
            app:destination="@id/detailNewsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.dicoding.plantwiseapp.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/mapsFragment"
        android:name="com.dicoding.plantwiseapp.ui.maps.MapsFragment"
        android:label="fragment_maps"
        tools:layout="@layout/fragment_maps" >
        <action
            android:id="@+id/action_mapsFragment_to_detailPlantFragment"
            app:destination="@id/detailPlantFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailNewsFragment"
        android:name="com.dicoding.plantwiseapp.ui.detailnews.DetailNewsFragment"
        android:label="fragment_detail_news"
        tools:layout="@layout/fragment_detail_news" />
    <fragment
        android:id="@+id/detailPlantFragment"
        android:name="com.dicoding.plantwiseapp.ui.detailplant.DetailPlantFragment"
        android:label="fragment_detail_plant"
        tools:layout="@layout/fragment_detail_plant" />
</navigation>